Fix NavBar alignment in Categories.tsx

--- a/src/styles/pages/_categories.scss
+++ b/src/styles/pages/_categories.scss
@@ -1,6 +1,6 @@
-@use 'sass:color';
-@use '../variables' as *;
-@use '../mixins' as *;
+@use "sass:color";
+@use "../variables" as *;
+@use "../mixins" as *;
 
 .categoriesPage {
   width: 100vw;
@@ -13,9 +13,9 @@
 
 .categoriesHeader {
   display: grid;
-  grid-template-columns: auto 1fr 0.5fr;
-  grid-template-rows: auto auto;
-  gap: 0.5rem 1rem;
+  grid-template-columns: auto 1fr auto;
+  align-items: center;
+  gap: 1rem;
   padding: 1rem 1.5rem;
   margin-bottom: 1rem;
 
@@ -25,7 +25,6 @@
     font-weight: $font-weight-bold;
     text-align: left;
     grid-column: 2;
-    grid-row: 1;
   }
 }
 
@@ -34,7 +33,8 @@
   width: 24px;
   height: 24px;
   grid-column: 1;
-  grid-row: 1;
+  display: flex;
+  align-items: center;
 
   &:hover {
     opacity: 0.7;
@@ -45,9 +45,9 @@
   width: 28px;
   height: 28px;
   cursor: pointer;
-  grid-column: 2;
-  grid-row: 2;
-  justify-self: end;
+  grid-column: 3;
+  display: flex;
+  align-items: center;
 
   &:hover {
     opacity: 0.7;
